# traytable

./: .gitignore  1_sample.ipynb  CODE_OF_CONDUCT.md  LICENSE  README.md  pipREADME.md  sample.ipynb  setup.cfg  wells.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test_via_pytest  test_via_pytest.yml
.virtual_documents/: 1_sample.ipynb.py
1_sample/: 1_sample.md
crystalscreening/: __init__.py  screens.py  wells.py
crystalscreening/examples/: samplescreens.py
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst  traytable.rst
docs/examples/: 0_simple_example.ipynb  index.rst
docs/quickstart/: index.md
docs/source/: modules.rst  traytable.rst
examples/: samplescreens.py
oldfiles/: README.md
tests/: test_log.py  test_minimal.py  test_project.py  test_screen_tray.py  test_well.py
traytable/: __init__.py  csv.py  plotting.py  project.py  screen.py  screens.py  wells.py
traytable/samples/: __init__.py  samplescreens.py
