[metadata]
name = traytable
version = 0.1.1.0
author = Dennis Brookner
author_email = debrookner@gmail.com
description = A python package for tabulating crystallization results across many trays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dennisbrookner/traytable
project_urls =
    Bug Tracker = https://github.com/dennisbrookner/traytable/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = traytable
packages = find:
install_requires = 
    pandas
    numpy
    varname
python_requires = >=3.6

[options.packages.find]
where = src
