[metadata]
name = traytable
version = 0.1.8
author = Dennis Brookner
author_email = debrookner@gmail.com
description = A python package for tabulating crystallization results across many trays
long_description = file: pipREADME.md
long_description_content_type = text/markdown
url = https://github.com/dennisbrookner/traytable
project_urls =
    Bug Tracker = https://github.com/dennisbrookner/traytable/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
install_requires = 
    pandas
    numpy
    varname
python_requires = >=3.6

#[options.packages.find]
#where = traytable
